# strumscore

./: .gitignore  CMakeLists.txt  README.md
cmake/: cpm.cmake  dependencies.cmake  options.cmake
src/: CMakeLists.txt  attributes.h  document.cpp  document.h  main.cpp  main_component.cpp  main_component.h
src/components/: main_component.cpp  main_component.h  menu_bar.cpp  menu_bar.h  menu_bar_model.cpp  menu_bar_model.h  staff.cpp  staff.h
src/util/: leftpad.cpp
test/: CMakeLists.txt
test/src/: audio_processor_test.cpp  main_component_test.cpp
